# Solana-D-Mail

./: Cargo.toml
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-1102-EZpcEN3gCz9gmSiy1wTcubbreXhzAv8SBDkNfWPmRXP2.tar  validator-keypair.json  vote-account-keypair.json
test-ledger/.tmpcmDRS2/rocksdb/: IDENTITY
test-ledger/accounts/: 0.39  10.57  100.248  1000.1922  1001.1921  1002.1935  1003.1933  1004.1932  1005.1931  1006.1930  1007.1929  1008.1936  1009.1938  101.247  1010.1940  1011.1942  1012.1944  1013.1946  1014.1948  1015.1950  1016.1952  1017.1954  1018.1956  1019.1958  102.246  1020.1960  1021.1964  1022.1963  1023.1966  1024.1968  1025.1970  1026.1974  1027.1973  1028.1976  1029.1978  103.245  1030.1982  1031.1981  1032.1984  1033.1986  (+360 more)
test-ledger/accounts/accounts/: 0.437  800.1577
test-ledger/rocksdb/: 000077.sst  000078.sst  000079.sst  000080.sst  000081.sst  000082.sst  000083.sst  000265.sst  000268.sst  000270.sst  000281.sst  000287.sst  000291.sst  000294.sst  000297.sst  000299.sst  000302.sst  000304.sst  000306.sst  LOG  LOG.old.1637049019409777  LOG.old.1637058051106572  MANIFEST-000084  MANIFEST-000227
test-ledger/snapshot/100/: 100
test-ledger/snapshot/1002/: 1002
test-ledger/snapshot/1102/: 1102
test-ledger/snapshot/200/: 200
test-ledger/snapshot/901/: 901
